// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SocialLink > Snapshot tests > matches snapshot for GitHub link 1`] = `
<div>
  <a
    aria-label="Visit GitHub Profile"
    class="inline-flex items-center justify-center rounded-md p-2 transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
    href="https://github.com/maxmustermann"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-github h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
      />
      <path
        d="M9 18c-4.51 2-5-2-7-2"
      />
    </svg>
    <span
      class="sr-only"
    >
      maxmustermann
    </span>
  </a>
</div>
`;

exports[`SocialLink > Snapshot tests > matches snapshot for unknown network 1`] = `
<div>
  <a
    aria-label="Visit MySpace Profile"
    class="inline-flex items-center justify-center rounded-md p-2 transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
    href="https://myspace.com/maxmustermann"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-link h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
      />
      <path
        d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
      />
    </svg>
    <span
      class="sr-only"
    >
      maxmustermann
    </span>
  </a>
</div>
`;

exports[`SocialLinks (Container Component) > Snapshot tests > matches snapshot with multiple profiles 1`] = `
<div>
  <div
    class="flex flex-wrap gap-2"
    role="list"
  >
    <a
      aria-label="Visit GitHub Profile"
      class="inline-flex items-center justify-center rounded-md p-2 transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
      href="https://github.com/maxmustermann"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-github h-5 w-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
        />
        <path
          d="M9 18c-4.51 2-5-2-7-2"
        />
      </svg>
      <span
        class="sr-only"
      >
        maxmustermann
      </span>
    </a>
    <a
      aria-label="Visit LinkedIn Profile"
      class="inline-flex items-center justify-center rounded-md p-2 transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
      href="https://linkedin.com/in/maxmustermann"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-linkedin h-5 w-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
        />
        <rect
          height="12"
          width="4"
          x="2"
          y="9"
        />
        <circle
          cx="4"
          cy="4"
          r="2"
        />
      </svg>
      <span
        class="sr-only"
      >
        maxmustermann
      </span>
    </a>
    <a
      aria-label="Visit Twitter Profile"
      class="inline-flex items-center justify-center rounded-md p-2 transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
      href="https://twitter.com/maxmustermann"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-twitter h-5 w-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
        />
      </svg>
      <span
        class="sr-only"
      >
        maxmustermann
      </span>
    </a>
  </div>
</div>
`;
